--- a/CPUandMB.html
+++ b/CPUandMB.html
@@ -22,7 +22,7 @@
 <div class="backBlack"></div>
 <div class="menu" >
     <div class="menu__overlay">
-        <a href="home.html" class="menuText">
+        <a href="index.html" class="menuText">
             <img src="images/menu.png" alt="Home"
                  style="width: 150px;height: 90px;top: 0px;position: absolute;display: block;">
             <div class="centeredH" style="top:90px;left: 10px">DOMOV</div>
@@ -61,7 +61,7 @@
         <p>CPU (skr. z angl. central processing unit) je hlavný procesor počítača. Interpretuje, vykonáva alebo spracúva inštrukcie alebo dáta programu vo forme strojového kódu.
             Osobný počítač (PC) obsahuje obvykle len jednu CPU. V súčasnosti sa však vyskytujú aj riešenia, ktoré implementujú dve alebo viac nezávislých CPU do jednej základnej dosky.
             Existujú superpočítače s viacerými integrovanými procesormi, ktoré vzájomne spolupracujú.
-            <img src="https://images-na.ssl-images-amazon.com/images/I/71h68eptZwL._AC_SX466_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 50vw;align: bottom">
+            <img src="images/cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 50vw;align: bottom">
         </p>
     </div>
     <div class="pageText" style="left: 20vw; top: 650px">
@@ -101,7 +101,7 @@
 
 <div class="popUpMenu" >
     <div class="menu__overlay">
-        <a href="home.html" class="menuText">
+        <a href="index.html" class="menuText">
             <img src="images/menu.png" alt="Home"
                  style="width: 220px;height: 140px;top: 10px; position: absolute;">
             <div class="centeredHM">DOMOV</div>
