--- a/RAMandHD.html
+++ b/RAMandHD.html
@@ -20,7 +20,7 @@
 <div class="backBlack"></div>
 <div class="menu" >
     <div class="menu__overlay">
-        <a href="home.html" class="menuText">
+        <a href="index.html" class="menuText">
             <img src="images/menu.png" alt="Home"
                  style="width: 150px;height: 90px;top: 0px;position: absolute;display: block;">
             <div class="centeredH" style="top:90px;left: 10px">DOMOV</div>
@@ -66,7 +66,7 @@
 
 <div class="popUpMenu" >
     <div class="menu__overlay">
-        <a href="home.html" class="menuText">
+        <a href="index.html" class="menuText">
             <img src="images/menu.png" alt="Home"
                  style="width: 220px;height: 140px;top: 10px; position: absolute;">
             <div class="centeredHM">DOMOV</div>
