--- a/CPUandMB.html
+++ b/CPUandMB.html
@@ -23,35 +23,35 @@
 <div class="menu" >
     <div class="menu__overlay">
         <a href="index.html" class="menuText">
-            <img src="images/menu.png" alt="Home"
+            <img src="menu.png" alt="Home"
                  style="width: 150px;height: 90px;top: 0px;position: absolute;display: block;">
             <div class="centeredH" style="top:90px;left: 10px">DOMOV</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="CPUandMB.html" class="menuText">
-            <img src="images/menu.png" alt="stranka2"
+            <img src="menu.png" alt="stranka2"
                  style="width: 150px;height: 90px;top: 94px;position: absolute;display: block;">
             <div class="centeredH" style="top:185px;">CPU&MB</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="GPU.html" class="menuText">
-            <img src="images/menu.png" alt="stranka3"
+            <img src="menu.png" alt="stranka3"
                  style="width: 150px;height: 90px;top: 188px;position: absolute;display: block;">
             <div class="centeredH" style="top:280px;left: 33px">GPU</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="RAMandHD.html" class="menuText">
-            <img src="images/menu.png" alt="stranka4"
+            <img src="menu.png" alt="stranka4"
                  style="width: 150px;height: 90px;top: 282px;position: absolute;display: block;">
             <div class="centeredH" style="top:375px;">PAMÄTE</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="OTHERS.html" class="menuText">
-            <img src="images/menu.png" alt="stranka5"
+            <img src="menu.png" alt="stranka5"
                  style="width: 150px;height: 90px;top: 376px;position: absolute;display: block;">
             <div class="centeredH" style="top:480px;">OSTATNÉ</div>
         </a>
@@ -61,14 +61,14 @@
         <p>CPU (skr. z angl. central processing unit) je hlavný procesor počítača. Interpretuje, vykonáva alebo spracúva inštrukcie alebo dáta programu vo forme strojového kódu.
             Osobný počítač (PC) obsahuje obvykle len jednu CPU. V súčasnosti sa však vyskytujú aj riešenia, ktoré implementujú dve alebo viac nezávislých CPU do jednej základnej dosky.
             Existujú superpočítače s viacerými integrovanými procesormi, ktoré vzájomne spolupracujú.
-            <img src="images/cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 50vw;align: bottom">
+            <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 50vw;align: bottom">
         </p>
     </div>
     <div class="pageText" style="left: 20vw; top: 650px">
         <p>
         Základná doska je doska obsahujúca elektronické súčiastky tvoriace základné prvky osobného počítača alebo iného elektronického zariadenia založeného na procesoroch.
         Matičná doska je zjednocujúcim prvkom v počítači, všetky ostatné moduly, súčasti, diely a periférie sa priamo, alebo nepriamo vkladajú, alebo pripájajú k matičnej doske.
-            <img src="images/mb.png"
+            <img src="mb.png"
                  style="border: 3px solid cyan;width: 50vw;align: bottom">
         </p>
     </div>
@@ -78,7 +78,7 @@
 <div class="popUpMenuButtom" >
     <div class="menu__overlay">
         <a onclick="popUpMenu()" onresize="menuBar()">
-            <img src="images/menuButton.PNG" alt="HTML tutorial"
+            <img src="menuButton.PNG" alt="HTML tutorial"
                  style="width: 45px;height:45px;top: -83px;position: absolute;">
         </a>
     </div>
@@ -86,14 +86,14 @@
         <p>CPU (skr. z angl. central processing unit) je hlavný procesor počítača. Interpretuje, vykonáva alebo spracúva inštrukcie alebo dáta programu vo forme strojového kódu.
             Osobný počítač (PC) obsahuje obvykle len jednu CPU. V súčasnosti sa však vyskytujú aj riešenia, ktoré implementujú dve alebo viac nezávislých CPU do jednej základnej dosky.
             Existujú superpočítače s viacerými integrovanými procesormi, ktoré vzájomne spolupracujú.
-            <img src="https://images-na.ssl-images-amazon.com/images/I/71h68eptZwL._AC_SX466_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;align: bottom">
+            <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;align: bottom">
         </p>
     </div>
     <div class="pageText" style="left: 10vw; top: 600px">
         <p>
             Základná doska je doska obsahujúca elektronické súčiastky tvoriace základné prvky osobného počítača alebo iného elektronického zariadenia založeného na procesoroch.
             Matičná doska je zjednocujúcim prvkom v počítači, všetky ostatné moduly, súčasti, diely a periférie sa priamo, alebo nepriamo vkladajú, alebo pripájajú k matičnej doske.
-            <img src="images/mb.png"
+            <img src="mb.png"
                  style="border: 3px solid cyan;width: 75vw;align: bottom">
         </p>
     </div>
@@ -102,35 +102,35 @@
 <div class="popUpMenu" >
     <div class="menu__overlay">
         <a href="index.html" class="menuText">
-            <img src="images/menu.png" alt="Home"
+            <img src="menu.png" alt="Home"
                  style="width: 220px;height: 140px;top: 10px; position: absolute;">
             <div class="centeredHM">DOMOV</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="CPUandMB.html" class="menuText">
-            <img src="images/menu.png" alt="stranka2"
+            <img src="menu.png" alt="stranka2"
                  style="width: 220px;height: 140px;top: 160px;position: absolute;">
             <div class="centeredCPUM">CPU&MB</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="GPU.html" class="menuText">
-            <img src="images/menu.png" alt="stranka3"
+            <img src="menu.png" alt="stranka3"
                  style="width: 220px;height: 140px;top: 310px;position: absolute;">
             <div class=centeredGPUM>GPU</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="RAMandHD.html" class="menuText">
-            <img src="images/menu.png" alt="stranka4"
+            <img src="menu.png" alt="stranka4"
                  style="width: 220px;height: 140px;top: 460px;position: absolute;">
             <div class="centeredRAMM">PAMÄTE</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="OTHERS.html" class="menuText">
-            <img src="images/menu.png" alt="stranka5"
+            <img src="menu.png" alt="stranka5"
                  style="width: 220px;height: 140px;top: 610px;position: absolute;">
             <div class="centeredOTHM">OSTATNÉ</div>
         </a>
