--- a/GPU.html
+++ b/GPU.html
@@ -25,35 +25,35 @@
 <div class="menu" >
     <div class="menu__overlay">
         <a href="index.html" class="menuText">
-            <img src="images/menu.png" alt="Home"
+            <img src="menu.png" alt="Home"
                  style="width: 150px;height: 90px;top: 0px;position: absolute;display: block;">
             <div class="centeredH" style="top:90px;left: 10px">DOMOV</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="CPUandMB.html" class="menuText">
-            <img src="images/menu.png" alt="stranka2"
+            <img src="menu.png" alt="stranka2"
                  style="width: 150px;height: 90px;top: 94px;position: absolute;display: block;">
             <div class="centeredH" style="top:185px;">CPU&MB</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="GPU.html" class="menuText">
-            <img src="images/menu.png" alt="stranka3"
+            <img src="menu.png" alt="stranka3"
                  style="width: 150px;height: 90px;top: 188px;position: absolute;display: block;">
             <div class="centeredH" style="top:280px;left: 33px">GPU</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="RAMandHD.html" class="menuText">
-            <img src="images/menu.png" alt="stranka4"
+            <img src="menu.png" alt="stranka4"
                  style="width: 150px;height: 90px;top: 282px;position: absolute;display: block;">
             <div class="centeredH" style="top:375px;">PAMÄTE</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="OTHERS.html" class="menuText">
-            <img src="images/menu.png" alt="stranka5"
+            <img src="menu.png" alt="stranka5"
                  style="width: 150px;height: 90px;top: 376px;position: absolute;display: block;">
             <div class="centeredH" style="top:480px;">OSTATNÉ</div>
         </a>
@@ -64,14 +64,14 @@
             Grafický procesor spracúva informácie z centrálneho procesora (CPU),
             a výsledok zobrazuje na monitore prostredníctvom analógového (D-SUB, DVI), respektíve digitálneho (DVI, HDMI alebo DisplayPort) výstupu.
 
-            <img src="images/graficke-karty.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 65vw;align: bottom">
+            <img src="graficke-karty.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 65vw;align: bottom">
         </p>
     </div>
 </div>
 <div class="popUpMenuButtom" >
     <div class="menu__overlay">
         <a onclick="popUpMenu()" onresize="menuBar()">
-            <img src="images/menuButton.PNG" alt="HTML tutorial"
+            <img src="menuButton.PNG" alt="HTML tutorial"
                  style="width: 45px;height:45px;top: -83px;position: absolute;">
         </a>
     </div>
@@ -81,7 +81,7 @@
             Grafický procesor spracúva informácie z centrálneho procesora (CPU),
             a výsledok zobrazuje na monitore prostredníctvom analógového (D-SUB, DVI), respektíve digitálneho (DVI, HDMI alebo DisplayPort) výstupu.
 
-            <img src="images/graficke-karty.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;align: bottom">
+            <img src="graficke-karty.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;align: bottom">
         </p>
     </div>
 </div>
@@ -89,35 +89,35 @@
 <div class="popUpMenu" >
     <div class="menu__overlay">
         <a href="index.html" class="menuText">
-            <img src="images/menu.png" alt="Home"
+            <img src="menu.png" alt="Home"
                  style="width: 220px;height: 140px;top: 10px; position: absolute;">
             <div class="centeredHM">DOMOV</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="CPUandMB.html" class="menuText">
-            <img src="images/menu.png" alt="stranka2"
+            <img src="menu.png" alt="stranka2"
                  style="width: 220px;height: 140px;top: 160px;position: absolute;">
             <div class="centeredCPUM">CPU&MB</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="GPU.html" class="menuText">
-            <img src="images/menu.png" alt="stranka3"
+            <img src="menu.png" alt="stranka3"
                  style="width: 220px;height: 140px;top: 310px;position: absolute;">
             <div class=centeredGPUM>GPU</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="RAMandHD.html" class="menuText">
-            <img src="images/menu.png" alt="stranka4"
+            <img src="menu.png" alt="stranka4"
                  style="width: 220px;height: 140px;top: 460px;position: absolute;">
             <div class="centeredRAMM">PAMÄTE</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="OTHERS.html" class="menuText">
-            <img src="images/menu.png" alt="stranka5"
+            <img src="menu.png" alt="stranka5"
                  style="width: 220px;height: 140px;top: 610px;position: absolute;">
             <div class="centeredOTHM">OSTATNÉ</div>
         </a>
