--- a/GPU.html
+++ b/GPU.html
@@ -15,13 +15,11 @@
 
 </head>
 <body onload="menuBar()" onresize="menuBar()">
+<div class="textArea"></div>
+
 <div class="header">
-    <h1>Grafické karty</h1>
+    <p>GRAFICKÉ KARTY</p>
 </div>
-
-
-
-<div class="backBlack"></div>
 <div class="menu" >
     <div class="menu__overlay">
         <a href="index.html" class="menuText">
@@ -58,7 +56,7 @@
             <div class="centeredH" style="top:480px;">OSTATNÉ</div>
         </a>
     </div>
-    <div class="pageText" style="left: 20vw">
+    <div class="pageText" style="left: 20vw; top: 100px">
         <p>Grafická karta je komponent počítača, ktorý zabezpečuje zobrazenie informácií na zobrazovacej jednotke, napríklad na monitore.
             Grafická karta je kombináciou (grafickej) pamäte (obvykle DRAM resp. jej modernejšie verzie DDR2, GDDR2 – GDDR6) a grafického procesora.
             Grafický procesor spracúva informácie z centrálneho procesora (CPU),
@@ -72,7 +70,7 @@
     <div class="menu__overlay">
         <a onclick="popUpMenu()" onresize="menuBar()">
             <img src="menuButton.PNG" alt="HTML tutorial"
-                 style="width: 45px;height:45px;top: -83px;position: absolute;">
+                 style="width: 45px;height:45px;top: 0px;position: absolute;">
         </a>
     </div>
     <div class="pageText" style="left: 10vw;top:80px">
@@ -90,39 +88,38 @@
     <div class="menu__overlay">
         <a href="index.html" class="menuText">
             <img src="menu.png" alt="Home"
-                 style="width: 220px;height: 140px;top: 10px; position: absolute;">
+                 style="width: 220px;height: 140px;top: 40px; position: absolute;">
             <div class="centeredHM">DOMOV</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="CPUandMB.html" class="menuText">
             <img src="menu.png" alt="stranka2"
-                 style="width: 220px;height: 140px;top: 160px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 190px;position: absolute;">
             <div class="centeredCPUM">CPU&MB</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="GPU.html" class="menuText">
             <img src="menu.png" alt="stranka3"
-                 style="width: 220px;height: 140px;top: 310px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 340px;position: absolute;">
             <div class=centeredGPUM>GPU</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="RAMandHD.html" class="menuText">
             <img src="menu.png" alt="stranka4"
-                 style="width: 220px;height: 140px;top: 460px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 490px;position: absolute;">
             <div class="centeredRAMM">PAMÄTE</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="OTHERS.html" class="menuText">
             <img src="menu.png" alt="stranka5"
-                 style="width: 220px;height: 140px;top: 610px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 640px;position: absolute;">
             <div class="centeredOTHM">OSTATNÉ</div>
         </a>
     </div>
-</div>
 </div>
 </body>
 
