--- a/CPUandMB.html
+++ b/CPUandMB.html
@@ -13,13 +13,11 @@
     </style>
 </head>
 <body onload="menuBar()" onresize="menuBar()">
+<div class="textArea"></div>
+
 <div class="header">
-    <h1>PROCESORY (CPU) A ZÁKLADNÉ DOSKY(MB)</h1>
+    <p>CPU a MB</p>
 </div>
-
-
-
-<div class="backBlack"></div>
 <div class="menu" >
     <div class="menu__overlay">
         <a href="index.html" class="menuText">
@@ -57,14 +55,14 @@
         </a>
     </div>
 
-    <div class="pageText" style="left: 20vw">
+    <div class="pageText" style="left: 20vw;top: 100px">
         <p>CPU (skr. z angl. central processing unit) je hlavný procesor počítača. Interpretuje, vykonáva alebo spracúva inštrukcie alebo dáta programu vo forme strojového kódu.
             Osobný počítač (PC) obsahuje obvykle len jednu CPU. V súčasnosti sa však vyskytujú aj riešenia, ktoré implementujú dve alebo viac nezávislých CPU do jednej základnej dosky.
             Existujú superpočítače s viacerými integrovanými procesormi, ktoré vzájomne spolupracujú.
             <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 50vw;align: bottom">
         </p>
     </div>
-    <div class="pageText" style="left: 20vw; top: 650px">
+    <div class="pageText" style="left: 20vw; top: 750px">
         <p>
         Základná doska je doska obsahujúca elektronické súčiastky tvoriace základné prvky osobného počítača alebo iného elektronického zariadenia založeného na procesoroch.
         Matičná doska je zjednocujúcim prvkom v počítači, všetky ostatné moduly, súčasti, diely a periférie sa priamo, alebo nepriamo vkladajú, alebo pripájajú k matičnej doske.
@@ -79,7 +77,7 @@
     <div class="menu__overlay">
         <a onclick="popUpMenu()" onresize="menuBar()">
             <img src="menuButton.PNG" alt="HTML tutorial"
-                 style="width: 45px;height:45px;top: -83px;position: absolute;">
+                 style="width: 45px;height:45px;top: 0px;position: absolute;">
         </a>
     </div>
     <div class="pageText" style="left: 10vw;top: 90px">
@@ -103,39 +101,38 @@
     <div class="menu__overlay">
         <a href="index.html" class="menuText">
             <img src="menu.png" alt="Home"
-                 style="width: 220px;height: 140px;top: 10px; position: absolute;">
+                 style="width: 220px;height: 140px;top: 40px; position: absolute;">
             <div class="centeredHM">DOMOV</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="CPUandMB.html" class="menuText">
             <img src="menu.png" alt="stranka2"
-                 style="width: 220px;height: 140px;top: 160px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 190px;position: absolute;">
             <div class="centeredCPUM">CPU&MB</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="GPU.html" class="menuText">
             <img src="menu.png" alt="stranka3"
-                 style="width: 220px;height: 140px;top: 310px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 340px;position: absolute;">
             <div class=centeredGPUM>GPU</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="RAMandHD.html" class="menuText">
             <img src="menu.png" alt="stranka4"
-                 style="width: 220px;height: 140px;top: 460px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 490px;position: absolute;">
             <div class="centeredRAMM">PAMÄTE</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="OTHERS.html" class="menuText">
             <img src="menu.png" alt="stranka5"
-                 style="width: 220px;height: 140px;top: 610px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 640px;position: absolute;">
             <div class="centeredOTHM">OSTATNÉ</div>
         </a>
     </div>
-
 </div>
 
 
