--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
 
 <body onload="menuBar()" onresize="menuBar()">
 
+    <div class="textArea"></div>
+
     <div class="header">
-        <h1>PC HARDWARE</h1>
+        <p>PC HARDWARE</p>
     </div>
-    <div class="backBlack"></div>
-    <div class="menu" >
+
+    <div class="menu">
+
         <div class="menu__overlay">
             <a href="index.html" class="menuText">
                 <img src="menu.png" alt="Home"
@@ -57,12 +60,13 @@
             <div class="centeredH" style="top:480px;">OSTATNÉ</div>
             </a>
         </div>
+
     </div>
     <div class="popUpMenuButtom" >
         <div class="menu__overlay">
             <a onclick="popUpMenu()" onresize="menuBar()">
                 <img src="menuButton.PNG" alt="HTML tutorial"
-                    style="width: 45px;height:45px;top: -83px;position: absolute;">
+                    style="width: 45px;height:45px;top: 0px;position: absolute;">
             </a>
         </div>
     </div>
@@ -71,39 +75,38 @@
         <div class="menu__overlay">
             <a href="index.html" class="menuText">
                 <img src="menu.png" alt="Home"
-                    style="width: 220px;height: 140px;top: 10px; position: absolute;">
+                    style="width: 220px;height: 140px;top: 40px; position: absolute;">
                 <div class="centeredHM">DOMOV</div>
             </a>
         </div>
         <div class="menu__overlay">
             <a href="CPUandMB.html" class="menuText">
                 <img src="menu.png" alt="stranka2"
-                    style="width: 220px;height: 140px;top: 160px;position: absolute;">
+                    style="width: 220px;height: 140px;top: 190px;position: absolute;">
                 <div class="centeredCPUM">CPU&MB</div>
             </a>
         </div>
         <div class="menu__overlay">
             <a href="GPU.html" class="menuText">
                 <img src="menu.png" alt="stranka3"
-                    style="width: 220px;height: 140px;top: 310px;position: absolute;">
+                    style="width: 220px;height: 140px;top: 340px;position: absolute;">
                 <div class=centeredGPUM>GPU</div>
             </a>
         </div>
         <div class="menu__overlay">
             <a href="RAMandHD.html" class="menuText">
                 <img src="menu.png" alt="stranka4"
-                    style="width: 220px;height: 140px;top: 460px;position: absolute;">
+                    style="width: 220px;height: 140px;top: 490px;position: absolute;">
                 <div class="centeredRAMM">PAMÄTE</div>
             </a>
         </div>
         <div class="menu__overlay">
             <a href="OTHERS.html" class="menuText">
                 <img src="menu.png" alt="stranka5"
-                    style="width: 220px;height: 140px;top: 610px;position: absolute;">
+                    style="width: 220px;height: 140px;top: 640px;position: absolute;">
                 <div class="centeredOTHM">OSTATNÉ</div>
             </a>
         </div>
-    </div>
     </div>
 
 
