--- a/CPUandMB.html
+++ b/CPUandMB.html
@@ -55,22 +55,27 @@
         </a>
     </div>
 
-    <div class="pageText" style="left: 20vw;top: 100px">
+    <div class=textBorder style="top: 5em">
         <p>CPU (skr. z angl. central processing unit) je hlavný procesor počítača. Interpretuje, vykonáva alebo spracúva inštrukcie alebo dáta programu vo forme strojového kódu.
             Osobný počítač (PC) obsahuje obvykle len jednu CPU. V súčasnosti sa však vyskytujú aj riešenia, ktoré implementujú dve alebo viac nezávislých CPU do jednej základnej dosky.
             Existujú superpočítače s viacerými integrovanými procesormi, ktoré vzájomne spolupracujú.
-            <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 50vw;align: bottom">
+
         </p>
     </div>
-    <div class="pageText" style="left: 20vw; top: 750px">
+    <div class=textBorder style="top: 42em;height: 1px"></div>
+
+    <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 40vw;position: absolute;left: 26vw;top:28em;">
+    <div class=textBorder style="top: 55rem">
         <p>
         Základná doska je doska obsahujúca elektronické súčiastky tvoriace základné prvky osobného počítača alebo iného elektronického zariadenia založeného na procesoroch.
         Matičná doska je zjednocujúcim prvkom v počítači, všetky ostatné moduly, súčasti, diely a periférie sa priamo, alebo nepriamo vkladajú, alebo pripájajú k matičnej doske.
-            <img src="mb.png"
-                 style="border: 3px solid cyan;width: 50vw;align: bottom">
+
         </p>
     </div>
-
+    <img src="mb.png"
+         style="border: 3px solid cyan;width: 40vw;top: 75em;left:26vw; position: absolute;">
+    <div class=textBorder style="top: 80em;height: 1px"></div>
+    <div class="menuline"></div>
 
 </div>
 <div class="popUpMenuButtom" >
@@ -80,21 +85,24 @@
                  style="width: 45px;height:45px;top: 0px;position: absolute;">
         </a>
     </div>
-    <div class="pageText" style="left: 10vw;top: 90px">
+    <div class=textBorder style="top: 5em;width: 80vw;left: 10vw">
         <p>CPU (skr. z angl. central processing unit) je hlavný procesor počítača. Interpretuje, vykonáva alebo spracúva inštrukcie alebo dáta programu vo forme strojového kódu.
             Osobný počítač (PC) obsahuje obvykle len jednu CPU. V súčasnosti sa však vyskytujú aj riešenia, ktoré implementujú dve alebo viac nezávislých CPU do jednej základnej dosky.
             Existujú superpočítače s viacerými integrovanými procesormi, ktoré vzájomne spolupracujú.
-            <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;align: bottom">
+
         </p>
     </div>
-    <div class="pageText" style="left: 10vw; top: 600px">
-        <p>
-            Základná doska je doska obsahujúca elektronické súčiastky tvoriace základné prvky osobného počítača alebo iného elektronického zariadenia založeného na procesoroch.
+    <div class=textBorder style="top: 42em;height: 1px;width: 80vw;left: 10vw"></div>
+    <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;position: absolute;left: 12vw;top:28em;">
+
+    <div class=textBorder style="top: 55rem;width: 80vw;left: 10vw">
+        <p>Základná doska je doska obsahujúca elektronické súčiastky tvoriace základné prvky osobného počítača alebo iného elektronického zariadenia založeného na procesoroch.
             Matičná doska je zjednocujúcim prvkom v počítači, všetky ostatné moduly, súčasti, diely a periférie sa priamo, alebo nepriamo vkladajú, alebo pripájajú k matičnej doske.
-            <img src="mb.png"
-                 style="border: 3px solid cyan;width: 75vw;align: bottom">
         </p>
     </div>
+    <div class=textBorder style="top: 75em;height: 1px;width: 80vw;left: 10vw"></div>
+    <img src="mb.png"
+         style="border: 3px solid cyan;width: 75vw;top: 74em;left:12vw; position: absolute;">
 </div>
 
 <div class="popUpMenu" >
