--- a/GPU.html
+++ b/GPU.html
@@ -65,6 +65,7 @@
             <img src="graficke-karty.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 65vw;align: bottom">
         </p>
     </div>
+    <div class="menuline"></div>
 </div>
 <div class="popUpMenuButtom" >
     <div class="menu__overlay">
@@ -82,6 +83,7 @@
             <img src="graficke-karty.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;align: bottom">
         </p>
     </div>
+
 </div>
 
 <div class="popUpMenu" >
