--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="centeredH" style="top:480px;">OSTATNÉ</div>
             </a>
         </div>
-
+        <div class="menuline"></div>
     </div>
     <div class="popUpMenuButtom" >
         <div class="menu__overlay">
