--- a/OTHERS.html
+++ b/OTHERS.html
@@ -54,6 +54,7 @@
             <div class="centeredH" style="top:480px;">OSTATNÉ</div>
         </a>
     </div>
+    <div class="menuline"></div>
 </div>
 <div class="popUpMenuButtom" >
     <div class="menu__overlay">
@@ -62,7 +63,9 @@
                  style="width: 45px;height:45px;top: 0px;position: absolute;">
         </a>
     </div>
+
 </div>
+
 
 <div class="popUpMenu" >
     <div class="menu__overlay">
