--- a/CPUandMB.html
+++ b/CPUandMB.html
@@ -62,10 +62,10 @@
 
         </p>
     </div>
-    <div class=textBorder style="top: 42em;height: 1px"></div>
+    <div class=textBorder style="top: 43em;height: 1px"></div>
 
-    <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 40vw;position: absolute;left: 26vw;top:28em;">
-    <div class=textBorder style="top: 55rem">
+    <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 40vw;position: absolute;left: 26vw;top:29em;">
+    <div class=textBorder style="top: 56rem">
         <p>
         Základná doska je doska obsahujúca elektronické súčiastky tvoriace základné prvky osobného počítača alebo iného elektronického zariadenia založeného na procesoroch.
         Matičná doska je zjednocujúcim prvkom v počítači, všetky ostatné moduly, súčasti, diely a periférie sa priamo, alebo nepriamo vkladajú, alebo pripájajú k matičnej doske.
@@ -75,6 +75,12 @@
     <img src="mb.png"
          style="border: 3px solid cyan;width: 40vw;top: 75em;left:26vw; position: absolute;">
     <div class=textBorder style="top: 80em;height: 1px"></div>
+
+
+    <img src="transp.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 20px;color: cyan">
+    <img src="transpR.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 350px;color: cyan">
+    <img src="transp.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 650px;color: cyan">
+    <img src="transpR.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 1000px;color: cyan">
     <div class="menuline"></div>
 
 </div>
@@ -93,7 +99,7 @@
         </p>
     </div>
     <div class=textBorder style="top: 42em;height: 1px;width: 80vw;left: 10vw"></div>
-    <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;position: absolute;left: 12vw;top:28em;">
+    <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;position: absolute;left: 12vw;top:33em;">
 
     <div class=textBorder style="top: 55rem;width: 80vw;left: 10vw">
         <p>Základná doska je doska obsahujúca elektronické súčiastky tvoriace základné prvky osobného počítača alebo iného elektronického zariadenia založeného na procesoroch.
@@ -102,7 +108,7 @@
     </div>
     <div class=textBorder style="top: 75em;height: 1px;width: 80vw;left: 10vw"></div>
     <img src="mb.png"
-         style="border: 3px solid cyan;width: 75vw;top: 74em;left:12vw; position: absolute;">
+         style="border: 3px solid cyan;width: 75vw;top: 77em;left:12vw; position: absolute;">
 </div>
 
 <div class="popUpMenu" >
