--- a/GPU.html
+++ b/GPU.html
@@ -56,15 +56,21 @@
             <div class="centeredH" style="top:480px;">OSTATNÉ</div>
         </a>
     </div>
-    <div class="pageText" style="left: 20vw; top: 100px">
+    <div class=textBorder style="top: 5em">
         <p>Grafická karta je komponent počítača, ktorý zabezpečuje zobrazenie informácií na zobrazovacej jednotke, napríklad na monitore.
             Grafická karta je kombináciou (grafickej) pamäte (obvykle DRAM resp. jej modernejšie verzie DDR2, GDDR2 – GDDR6) a grafického procesora.
             Grafický procesor spracúva informácie z centrálneho procesora (CPU),
             a výsledok zobrazuje na monitore prostredníctvom analógového (D-SUB, DVI), respektíve digitálneho (DVI, HDMI alebo DisplayPort) výstupu.
-
-            <img src="graficke-karty.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 65vw;align: bottom">
         </p>
     </div>
+    <div class=textBorder style="top: 48em;height: 1px"></div>
+
+    <img src="graficke-karty.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 40vw;position: absolute;left: 26vw;top:32em;">
+
+    <img src="transp.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 20px;color: cyan">
+    <img src="transpR.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 350px;color: cyan">
+    <img src="transp.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 650px;color: cyan">
+    <img src="transpR.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 1000px;color: cyan">
     <div class="menuline"></div>
 </div>
 <div class="popUpMenuButtom" >
@@ -74,15 +80,16 @@
                  style="width: 45px;height:45px;top: 0px;position: absolute;">
         </a>
     </div>
-    <div class="pageText" style="left: 10vw;top:80px">
+    <div class=textBorder style="top: 7em;width: 80vw;left: 10vw">
         <p>Grafická karta je komponent počítača, ktorý zabezpečuje zobrazenie informácií na zobrazovacej jednotke, napríklad na monitore.
             Grafická karta je kombináciou (grafickej) pamäte (obvykle DRAM resp. jej modernejšie verzie DDR2, GDDR2 – GDDR6) a grafického procesora.
             Grafický procesor spracúva informácie z centrálneho procesora (CPU),
             a výsledok zobrazuje na monitore prostredníctvom analógového (D-SUB, DVI), respektíve digitálneho (DVI, HDMI alebo DisplayPort) výstupu.
-
-            <img src="graficke-karty.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;align: bottom">
         </p>
     </div>
+    <div class=textBorder style="top: 43em;height: 1px;width: 80vw;left: 10vw"></div>
+    <img src="graficke-karty.jpg" alt="imgCPU"
+            style="border: 3px solid cyan;width: 75vw;position: absolute;left: 12vw;top:39em;">
 
 </div>
 
