--- a/OTHERS.html
+++ b/OTHERS.html
@@ -54,6 +54,11 @@
             <div class="centeredH" style="top:480px;">OSTATNÉ</div>
         </a>
     </div>
+
+    <img src="transp.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 20px;color: cyan">
+    <img src="transpR.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 350px;color: cyan">
+    <img src="transp.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 650px;color: cyan">
+    <img src="transpR.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 1000px;color: cyan">
     <div class="menuline"></div>
 </div>
 <div class="popUpMenuButtom" >
