--- a/RAMandHD.html
+++ b/RAMandHD.html
@@ -9,6 +9,7 @@
     <style>
         body {
             background-color: cyan;
+            overflow-x: hidden;
         }
     </style>
 </head>
@@ -55,10 +56,10 @@
         </a>
     </div>
 
-    <img src="transp.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 20px;color: cyan">
-    <img src="transpR.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 350px;color: cyan">
-    <img src="transp.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 650px;color: cyan">
-    <img src="transpR.png" alt="nice" style="left: 70vw;width: 40vw;position: absolute;top: 1000px;color: cyan">
+    <img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 20px;color: cyan">
+    <img src="transpR.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 350px;color: cyan">
+    <img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 650px;color: cyan">
+    <img src="transpR.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 1000px;color: cyan">
     <div class="menuline"></div>
 </div>
 <div class="popUpMenuButtom" >
