--- a/CPUandMB.html
+++ b/CPUandMB.html
@@ -56,6 +56,12 @@
         </a>
     </div>
 
+    <div class="menu__overlay">
+        <a href="https://github.com/MatejProsovsky/MatejProsovsky.github.io" class="menuText">
+            <img src="git.png" alt="git" style="position: absolute;top: 500px;left: 40px;width: 70px;display: block;">
+        </a>
+    </div>
+
     <div class=textBorder style="top: 5em">
         <p>CPU (skr. z angl. central processing unit) je hlavný procesor počítača. Interpretuje, vykonáva alebo spracúva inštrukcie alebo dáta programu vo forme strojového kódu.
             Osobný počítač (PC) obsahuje obvykle len jednu CPU. V súčasnosti sa však vyskytujú aj riešenia, ktoré implementujú dve alebo viac nezávislých CPU do jednej základnej dosky.
@@ -75,7 +81,7 @@
     </div>
     <img src="mb.png"
          style="border: 3px solid cyan;width: 40vw;top: 75em;left:26vw; position: absolute;">
-    <div class=textBorder style="top: 80em;height: 1px"></div>
+
 
 
     <img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 20px;color: cyan">
@@ -92,24 +98,24 @@
                  style="width: 45px;height:45px;top: 0px;position: absolute;">
         </a>
     </div>
-    <div class=textBorder style="top: 5em;width: 80vw;left: 10vw">
+    <div class=textBorder style="top: 5em;width: 80vw;left: 5vw">
         <p>CPU (skr. z angl. central processing unit) je hlavný procesor počítača. Interpretuje, vykonáva alebo spracúva inštrukcie alebo dáta programu vo forme strojového kódu.
             Osobný počítač (PC) obsahuje obvykle len jednu CPU. V súčasnosti sa však vyskytujú aj riešenia, ktoré implementujú dve alebo viac nezávislých CPU do jednej základnej dosky.
             Existujú superpočítače s viacerými integrovanými procesormi, ktoré vzájomne spolupracujú.
 
         </p>
     </div>
-    <div class=textBorder style="top: 42em;height: 1px;width: 80vw;left: 10vw"></div>
-    <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;position: absolute;left: 12vw;top:33em;">
+    <div class=textBorder style="top: 42em;height: 1px;width: 80vw;left: 5vw"></div>
+    <img src="cpu_.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 75vw;position: absolute;left: 12vw;top:36em;">
 
-    <div class=textBorder style="top: 55rem;width: 80vw;left: 10vw">
+    <div class=textBorder style="top: 55rem;width: 80vw;left: 5vw">
         <p>Základná doska je doska obsahujúca elektronické súčiastky tvoriace základné prvky osobného počítača alebo iného elektronického zariadenia založeného na procesoroch.
             Matičná doska je zjednocujúcim prvkom v počítači, všetky ostatné moduly, súčasti, diely a periférie sa priamo, alebo nepriamo vkladajú, alebo pripájajú k matičnej doske.
         </p>
     </div>
-    <div class=textBorder style="top: 75em;height: 1px;width: 80vw;left: 10vw"></div>
+    <div class=textBorder style="top: 75em;height: 1px;width: 80vw;left: 5vw"></div>
     <img src="mb.png"
-         style="border: 3px solid cyan;width: 75vw;top: 77em;left:12vw; position: absolute;">
+         style="border: 3px solid cyan;width: 75vw;top: 79em;left:12vw; position: absolute;">
 </div>
 
 <div class="popUpMenu" >
