--- a/GPU.html
+++ b/GPU.html
@@ -57,6 +57,13 @@
             <div class="centeredH" style="top:480px;">OSTATNÉ</div>
         </a>
     </div>
+
+    <div class="menu__overlay">
+        <a href="https://github.com/MatejProsovsky/MatejProsovsky.github.io" class="menuText">
+            <img src="git.png" alt="git" style="position: absolute;top: 500px;left: 40px;width: 70px;display: block;">
+        </a>
+    </div>
+
     <div class=textBorder style="top: 5em">
         <p>Grafická karta je komponent počítača, ktorý zabezpečuje zobrazenie informácií na zobrazovacej jednotke, napríklad na monitore.
             Grafická karta je kombináciou (grafickej) pamäte (obvykle DRAM resp. jej modernejšie verzie DDR2, GDDR2 – GDDR6) a grafického procesora.
@@ -64,7 +71,7 @@
             a výsledok zobrazuje na monitore prostredníctvom analógového (D-SUB, DVI), respektíve digitálneho (DVI, HDMI alebo DisplayPort) výstupu.
         </p>
     </div>
-    <div class=textBorder style="top: 48em;height: 1px"></div>
+
 
     <img src="graficke-karty.jpg" alt="imgCPU" style="border: 3px solid cyan;width: 40vw;position: absolute;left: 26vw;top:32em;">
 
@@ -81,16 +88,15 @@
                  style="width: 45px;height:45px;top: 0px;position: absolute;">
         </a>
     </div>
-    <div class=textBorder style="top: 7em;width: 80vw;left: 10vw">
+    <div class=textBorder style="top: 7em;width: 80vw;left: 5vw">
         <p>Grafická karta je komponent počítača, ktorý zabezpečuje zobrazenie informácií na zobrazovacej jednotke, napríklad na monitore.
             Grafická karta je kombináciou (grafickej) pamäte (obvykle DRAM resp. jej modernejšie verzie DDR2, GDDR2 – GDDR6) a grafického procesora.
             Grafický procesor spracúva informácie z centrálneho procesora (CPU),
             a výsledok zobrazuje na monitore prostredníctvom analógového (D-SUB, DVI), respektíve digitálneho (DVI, HDMI alebo DisplayPort) výstupu.
         </p>
     </div>
-    <div class=textBorder style="top: 43em;height: 1px;width: 80vw;left: 10vw"></div>
     <img src="graficke-karty.jpg" alt="imgCPU"
-            style="border: 3px solid cyan;width: 75vw;position: absolute;left: 12vw;top:39em;">
+            style="border: 3px solid cyan;width: 75vw;position: absolute;left: 11vw;top:42em;">
 
 </div>
 
