--- a/OTHERS.html
+++ b/OTHERS.html
@@ -19,7 +19,9 @@
 <div class="header">
     <p>OSTATNÉ</p>
 </div>
+
 <div class="menu" >
+
     <div class="menu__overlay">
         <a href="index.html" class="menuText">
             <img src="menu.png" alt="Home"
@@ -56,12 +58,21 @@
         </a>
     </div>
 
+    <div class="menu__overlay">
+        <a href="https://github.com/MatejProsovsky/MatejProsovsky.github.io" class="menuText">
+            <img src="git.png" alt="git" style="position: absolute;top: 500px;left: 40px;width: 70px;display: block;">
+        </a>
+    </div>
+
     <<img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 20px;color: cyan">
     <img src="transpR.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 350px;color: cyan">
     <img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 650px;color: cyan">
     <img src="transpR.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 1000px;color: cyan">
-    <div class="menuline"></div>
+
+    <div class="menuline" style="top: -2px;"></div>
+
 </div>
+
 <div class="popUpMenuButtom" >
     <div class="menu__overlay">
         <a onclick="popUpMenu()" onresize="menuBar()">
