--- a/RAMandHD.html
+++ b/RAMandHD.html
@@ -56,6 +56,12 @@
         </a>
     </div>
 
+    <div class="menu__overlay">
+        <a href="https://github.com/MatejProsovsky/MatejProsovsky.github.io" class="menuText">
+            <img src="git.png" alt="git" style="position: absolute;top: 500px;left: 40px;width: 70px;display: block;">
+        </a>
+    </div>
+
     <img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 20px;color: cyan">
     <img src="transpR.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 350px;color: cyan">
     <img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 650px;color: cyan">
