--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="textArea"></div>
 
-    <div class="header">
+    <div class="header" style="left: 20vw">
         <p>PC HARDWARE</p>
     </div>
 
@@ -62,6 +62,22 @@
             </a>
         </div>
 
+        <div class="menu__overlay">
+            <a href="https://github.com/MatejProsovsky/MatejProsovsky.github.io" class="menuText">
+                <img src="git.png" alt="git" style="position: absolute;top: 500px;left: 40px;width: 70px;display: block;">
+            </a>
+        </div>
+
+
+        <div class=textBorder style="top: 5em">
+            <p>Hardvér je súhrnný názov pre technické vybavenie počítača a počítačových komponentov.
+                Medzi hardvér patria všetky počítače a ich súčasti, periférie a tiež aj zariadenia, ktoré je možné pripojiť k počítaču.
+                V úvodzovkách „všetko, čo sa dá chytiť“, čiže všetko hmotné čo patrí k počítaču.
+            </p>
+        </div>
+
+        <img src=hardw.png alt="imgCPU" style="width: 75vw;position: absolute;left: 8vw;top:20em;">
+
         <img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 20px;color: cyan">
         <img src="transpR.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 350px;color: cyan">
         <img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 650px;color: cyan">
@@ -75,6 +91,15 @@
                     style="width: 45px;height:45px;top: 0px;position: absolute;">
             </a>
         </div>
+
+        <div class=textBorder style="top: 7em;width: 80vw;left: 5vw;">
+            <p>Hardvér je súhrnný názov pre technické vybavenie počítača a počítačových komponentov.
+                Medzi hardvér patria všetky počítače a ich súčasti, periférie a tiež aj zariadenia, ktoré je možné pripojiť k počítaču.
+                V úvodzovkách „všetko, čo sa dá chytiť“, čiže všetko hmotné čo patrí k počítaču.
+            </p>
+        </div>
+
+        <img src=hardw.png alt="imgCPU" style="width: 140vw;position: absolute;left: -20vw;top:28em;">
     </div>
 
     <div class="popUpMenu" >
@@ -111,6 +136,11 @@
                 <img src="menu.png" alt="stranka5"
                     style="width: 220px;height: 140px;top: 640px;position: absolute;">
                 <div class="centeredOTHM">OSTATNÉ</div>
+            </a>
+        </div>
+        <div class="menu__overlay">
+            <a href="https://github.com/MatejProsovsky/MatejProsovsky.github.io" class="menuText">
+                <img src="git.png" alt="git" style="position: absolute;top: 785px;width: 70px;left: 65px;">
             </a>
         </div>
     </div>
