--- a/CPUandMB.html
+++ b/CPUandMB.html
@@ -79,8 +79,7 @@
 
         </p>
     </div>
-    <img src="mb.png"
-         style="border: 3px solid cyan;width: 40vw;top: 75em;left:26vw; position: absolute;">
+    <img src="mb.png" style="border: 3px solid cyan;width: 40vw;top: 75em;left:26vw; position: absolute;">
 
 
 
