--- a/CPUandMB.html
+++ b/CPUandMB.html
@@ -113,7 +113,7 @@
         </p>
     </div>
     <div class=textBorder style="top: 75em;height: 1px;width: 80vw;left: 5vw"></div>
-    <img src="mb.png"
+    <img src="mb.png" alt="MB"
          style="border: 3px solid cyan;width: 75vw;top: 79em;left:12vw; position: absolute;">
 </div>
 
