--- a/OTHERS.html
+++ b/OTHERS.html
@@ -64,7 +64,7 @@
         </a>
     </div>
 
-    <<img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 20px;color: cyan">
+    <img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 20px;color: cyan">
     <img src="transpR.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 350px;color: cyan">
     <img src="transp.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 650px;color: cyan">
     <img src="transpR.png" alt="nice" style="left: 68vw;width: 30vw;position: absolute;top: 1000px;color: cyan">
