--- a/RAMandHD.html
+++ b/RAMandHD.html
@@ -89,31 +89,38 @@
     <div class="menu__overlay">
         <a href="CPUandMB.html" class="menuText">
             <img src="menu.png" alt="stranka2"
-                 style="width: 220px;height: 140px;top: 190px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 180px;position: absolute;">
             <div class="centeredCPUM">CPU&MB</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="GPU.html" class="menuText">
             <img src="menu.png" alt="stranka3"
-                 style="width: 220px;height: 140px;top: 340px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 320px;position: absolute;">
             <div class=centeredGPUM>GPU</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="RAMandHD.html" class="menuText">
             <img src="menu.png" alt="stranka4"
-                 style="width: 220px;height: 140px;top: 490px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 460px;position: absolute;">
             <div class="centeredRAMM">PAMÄTE</div>
         </a>
     </div>
     <div class="menu__overlay">
         <a href="OTHERS.html" class="menuText">
             <img src="menu.png" alt="stranka5"
-                 style="width: 220px;height: 140px;top: 640px;position: absolute;">
+                 style="width: 220px;height: 140px;top: 600px;position: absolute;">
             <div class="centeredOTHM">OSTATNÉ</div>
         </a>
     </div>
+    <div class="menu__overlay">
+        <a href="https://github.com/MatejProsovsky/MatejProsovsky.github.io" class="menuText">
+            <img src="git.png" alt="git" style="position: absolute;top: 785px;width: 70px;left: 65px;">
+        </a>
+    </div>
 </div>
+
 </body>
+
 </html>
